--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@ai-sdk/google": "^2.0.44",
     "ai": "^5.0.108",
     "bcrypt": "^6.0.0",
+    "connect-mongo": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.3",
     "ejs": "^3.1.10",
